--- a/MenschApp/res/values/strings.xml
+++ b/MenschApp/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="settings">Einstellungen</string>
     <string name="highscore">Rangliste</string>
+    <string name="title_activity_game_detail">GameDetailActivity</string>
+    <string name="labelPrefs">Einstellungen</string>
 
 </resources>
